--- a/module06/NorthwindMvcApp/Views/Shared/Components/ProductsTable.cshtml
+++ b/module06/NorthwindMvcApp/Views/Shared/Components/ProductsTable.cshtml
@@ -28,7 +28,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.CategoryName)
             </th>
-            @if (this.User?.FindFirst(c => c.Type == ClaimTypes.Role)?.Value == "admin")
+            @if (this.User.IsAdmin())
             {
                 <th></th>
             }
@@ -62,7 +62,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.CategoryName)
                 </td>
-                @if (this.User?.FindFirst(c => c.Type == ClaimTypes.Role)?.Value == "admin")
+                @if (this.User.IsAdmin())
                 {
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
