--- a/module06/NorthwindMvcApp/Views/Shared/_Layout.cshtml
+++ b/module06/NorthwindMvcApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NorthwindMvcApp</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="~/css/site.css" type="text/css" />
     <link href="~/lib/bootstrap-multiselect/css/bootstrap-multiselect.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">NorthwindMvcApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Northwind</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,28 +23,36 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="BlogArticles" asp-action="Index">Articles</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BlogArticle" asp-action="Index">Articles</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employees</a>
+                        </li>
+                        @if (User.IsAdmin())
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                            </li>
+                        }
                     </ul>
                 </div>
                 @if (User.Identity.IsAuthenticated)
                 {
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
-                        <div>@User.FindFirst(c => c.Type == ClaimTypes.Name)?.Value&nbsp|&nbsp</div>
+                        <div>Hello, @User.FindFirst(c => c.Type == ClaimTypes.Name)?.Value!&nbsp|&nbsp</div>
                     </div>
                 }
                 else
                 {
-                    <a asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                    <a asp-area="" asp-controller="Account" asp-action="Login">Sign in</a>
                 }
-
             </div>
         </nav>
     </header>
