--- a/module06/NorthwindMvcApp/Views/BlogArticle/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/BlogArticle/Index.cshtml
@@ -9,7 +9,7 @@
 
 <h1>Index</h1>
 
-@if (User.FindFirst(x => x.Type == ClaimTypes.Role).Value == "employee")
+@if (User.IsEmployee())
 {
     <p>
         <a asp-action="Create">Create New</a>
