--- a/module06/NorthwindMvcApp/Views/Category/Index.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Index.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Categories</h1>
 
-@if (this.User?.FindFirst(c => c.Type == ClaimTypes.Role)?.Value == "admin")
+@if (this.User.IsAdmin())
 {
     <p>
         <a asp-action="Create">Create New</a>
