--- a/module06/NorthwindMvcApp/Views/_ViewImports.cshtml
+++ b/module06/NorthwindMvcApp/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using NorthwindMvcApp
 @using NorthwindMvcApp.ViewModels
 @using System.Security.Claims
+@using NorthwindMvcApp.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, NorthwindMvcApp
 @addTagHelper *, PageLinkTagHelper
