Implement CRUD operations for customers

--- a/module06/NorthwindMvcApp/Views/Category/Create.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Create.cshtml
@@ -11,7 +11,7 @@
 
 <div>
     <form asp-action="Create" enctype="multipart/form-data">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
         <div class="w-25">
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
