--- a/module06/NorthwindMvcApp/Views/Category/Delete.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Delete.cshtml
@@ -7,8 +7,10 @@
 }
 
 <h3>Are you sure you want to delete this category?</h3>
+
 <div>
     <hr />
+    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
     <div class="container mb-3">
         <div class="row">
             <div class="col-sm-1 font-weight-bold">
