--- a/module06/NorthwindMvcApp/Views/Category/Edit.cshtml
+++ b/module06/NorthwindMvcApp/Views/Category/Edit.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-10">
         <form asp-action="Edit" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
