--- a/module06/NorthwindMvcApp/Views/Shared/_Layout.cshtml
+++ b/module06/NorthwindMvcApp/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employees</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customers</a>
+                        </li>
                         @if (User.IsAdmin())
                         {
                             <li class="nav-item">
